# stock-wizard

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  docker-compose.yml  dump.rdb  justfile  leftover.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  eslint.config.js  package.json  svelte.config.js  vite.config.ts  vitest-setup-client.ts
apps/web/e2e/: demo.test.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: contracts.schema.json  icons.ts  types.ts
apps/web/src/lib/components/: DataHealthCard.svelte  EquityCurveChart.svelte  EvidencePanel.svelte  FeatureImportanceChart.svelte  GammaProfileChart.svelte  Icon.svelte  ResultsTable.svelte  SignalCard.svelte  VendorKeyRow.svelte
apps/web/src/lib/server/: api.ts
apps/web/src/lib/state/: scanner.svelte.ts  stream.svelte.ts
apps/web/src/routes/: +layout.svelte  +page.svelte  health.remote.ts
apps/web/src/routes/alerts/: +page.svelte  data.remote.ts
apps/web/src/routes/backtest/: +page.svelte  data.remote.ts
apps/web/src/routes/discovery/: +page.svelte  data.remote.ts
apps/web/src/routes/ensemble/: +page.svelte  data.remote.ts
apps/web/src/routes/forward/: +page.svelte  data.remote.ts
apps/web/src/routes/gamma/: +page.svelte  data.remote.ts
apps/web/src/routes/ml/: +page.svelte  data.remote.ts
apps/web/src/routes/portfolio/: +page.svelte  data.remote.ts
docs/: ARCHITECTURE.md  BACKTESTS.md  ROADMAP.md
engine/: pyproject.toml
engine/engine/: __init__.py
engine/engine/alerts/: __init__.py  engine.py
engine/engine/backtesting/: __init__.py  engine.py  ensemble_bt.py  failure.py  leakage.py  metrics.py  options_bt.py  portfolio.py  roster.py  walkforward.py
engine/engine/data/: __init__.py  base.py  calendar.py  edgar_source.py  finnhub_source.py  fmp_source.py  internals_stub.py  registry.py  schwab_source.py  validation.py  yfinance_source.py
engine/engine/evidence/: __init__.py  bayesian.py  ensemble.py
engine/engine/features/: __init__.py  atr.py  base.py  factory.py  gex.py  greeks.py  internals.py  levels.py  options_metrics.py  price_structure.py  regime.py  squeeze.py  volume.py  volume_profile.py  vwap.py
engine/engine/ml/: __init__.py  absorption.py  anomaly.py  calibration.py  calibration_builder.py  cross_validation.py  dataset.py  discovery.py  genetic.py  info_theory.py  meta_labeling.py  models.py  regime.py  rl_lab.py
engine/engine/reports/: __init__.py  csv_export.py  pdf_export.py
engine/engine/reports/templates/: backtest_report.html.j2  discovery_report.html.j2  evidence_report.html.j2
engine/engine/risk/: __init__.py  position.py
engine/engine/scanners/: __init__.py  _common.py  base.py  catalyst_scanners.py  cross_asset.py  custom_rule.py  insider_congress.py  internals_scanners.py  levels_scanners.py  ml_scanners.py  mtf_structure.py  options_gamma.py  price_action.py  regime.py  regime_affinity.py  registry.py  reversal_pullback.py  spx_gamma_command.py  volume_profile_poc.py  volume_scanners.py
engine/engine/schemas/: __init__.py  alerts.py  backtest.py  catalyst.py  enums.py  evidence.py  export_jsonschema.py  features.py  market.py  options.py  report.py  scanner.py  signal.py
engine/engine/signals/: __init__.py  builder.py  invalidation.py
services/api/: pyproject.toml
services/api/app/: db.py  jobs.py  main.py  pubsub.py  security.py
services/api/app/repositories/: repo.py
services/api/app/routers/: alerts.py  backtests.py  discovery.py  exports.py  health.py  ml.py  results.py  scanners.py  scans.py  vendors.py
services/api/app/services/: alert_service.py  backtest_service.py  discovery_service.py  ensemble_service.py  ml_service.py  roster_service.py  scan_service.py  schwab_creds.py
services/worker/: pyproject.toml
services/worker/worker/: main.py  tasks.py
storage/: pyproject.toml
storage/migrations/: env.py
storage/migrations/versions/: 0001_initial.py  0002_backtests.py  0003_alerts.py
storage/schemas/: __init__.py  models.py
tests/: conftest.py
tests/data_quality/: test_validation.py
tests/integration/: conftest.py  test_e2e_pipeline.py
tests/unit/: test_advanced_ml.py  test_alerts.py  test_all_scanners.py  test_backtest.py  test_backtest_report.py  test_bayesian_failure.py  test_calibration.py  test_catalyst_scanners.py  test_custom_rule.py  test_discovery_genetic.py  test_features.py  test_fmp_and_keys.py  test_gex.py  test_greeks.py  test_internals.py  test_leakage.py  test_meta_labeling.py  test_ml.py  test_options_portfolio_bt.py  test_reports.py  test_rl_lab.py  test_scanners.py  test_schemas.py  test_schwab.py  test_security.py  test_signals.py  test_timeutils.py  test_walkforward.py
(+12 files in other folders)
