[project]
name = "stock-wizard"
version = "0.1.0"
description = "Ultimate Self-Learning Trading Scanner, Backtester and Signal Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "engine",
    "common",
    "storage",
    "trading-api",
    "trading-worker",
]

[tool.uv.workspace]
members = ["engine", "packages/common", "storage", "services/api", "services/worker"]

[tool.uv.sources]
engine = { workspace = true }
common = { workspace = true }
storage = { workspace = true }
trading-api = { workspace = true }
trading-worker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "testcontainers[postgres,redis]>=4.8",
    "vcrpy>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "freezegun>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["engine", "packages/common", "services/api", "services/worker", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # FastAPI Depends() in defaults is idiomatic
    "RUF012",  # class-level config dicts (scanner params, WorkerSettings) are intentional
    "RUF002",  # ambiguous unicode in docstrings (we use σ, –, ² as math notation)
    "RUF003",  # ambiguous unicode in comments (same reason)
    "UP042",   # custom 3.11-compatible StrEnum base
    "RUF022",  # __all__ grouped by domain rather than sorted
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
