[project]
name = "engine"
version = "0.1.0"
description = "Quant engine: schemas, data adapters, features, scanners, signals, backtesting, reports"
requires-python = ">=3.11"
dependencies = [
    "common",
    "pydantic>=2.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "yfinance>=0.2.40",
    "pandas-market-calendars>=4.4",
    "py-vollib>=1.0.1",
    "py-vollib-vectorized>=0.1.1",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "requests>=2.31",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]
