[project]
name = "storage"
version = "0.1.0"
description = "Database schema (SQLAlchemy models) and Alembic migrations"
requires-python = ">=3.11"
dependencies = [
    "common",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas"]
