[project]
name = "trading-api"
version = "0.1.0"
description = "FastAPI service exposing the quant engine to the dashboard"
requires-python = ">=3.11"
dependencies = [
    "engine",
    "common",
    "storage",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "arq>=0.26",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
engine = { workspace = true }
common = { workspace = true }
storage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
