[project]
name = "trading-worker"
version = "0.1.0"
description = "arq worker running scans, backtests, ML jobs, and exports"
requires-python = ">=3.11"
dependencies = [
    "engine",
    "common",
    "trading-api",
    "arq>=0.26",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]

[tool.uv.sources]
engine = { workspace = true }
common = { workspace = true }
trading-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
