[package]
name = "stock-wizard-desktop"
version = "0.1.0"
description = "Stock Wizard desktop shell (Tauri) wrapping the SvelteKit dashboard"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
